Adicionado contúdo da página HTML sobre os usos das linguagens de HTML, CSS e Markdown

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Descrição de Linguagens</h1>
+    <h2>Para que serve o HTML?</h2>
+    <p>A linguagem de HTML(Hyper Text Markup Language) permite a construção de websites com inserção de imagens, vídeos, links e outros atributos. </p>
+    <p>O html pode ser usado em:</p>
+    <ul>
+        <li>Parte visual de aplicações web, como no frontend;</li>
+        <li>Desenvolvimento de aplicações Mobile para Android e iOS;</li>
+        <li>Desenvolvimento de jogos</li>
+    </ul>
+    <h2>Para quê serve o CSS?</h2>
+    <p>A linguagem de CSS(Cascating Style Sheets) é uma linguagem de marcação usado juntamente ao HTML, ou seja, é um código utilizado na representação visual dos Websites.</p>
+    <h2>Para quê serve o Markdown?</h2>
+    <p>O Markdown é um sistema de formatação simples e aberta, sendo ele visualmente limpo e pode ser facilmente convertido em HTML. Basicamente as alterações nos textos são feitos apenas com os símbolos do teclado, sem um um visual complexo como os de HTML ou CSS. </p>
 </body>
 </html>
