Adicionando elementos CSS na página e Finalizando

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Descrição de Linguagens</h1>
-    <h2>Para que serve o HTML?</h2>
-    <p>A linguagem de HTML(Hyper Text Markup Language) permite a construção de websites com inserção de imagens, vídeos, links e outros atributos. </p>
-    <p>O html pode ser usado em:</p>
+    <h1>Descrição de Linguagens</h1> <br>
+    <h2 class="title">Para que serve o HTML?</h2> 
+    <p>A linguagem de HTML(Hyper Text Markup Language) permite a construção de websites com inserção de imagens, vídeos, links e outros atributos. Basicamente os hipertextos são a junção de vários elementos (palavras, vídeos e conteúdos), que, quando conectados, estabelecem uma rede de dados que permite a comunicação, o armazenamento e o compartilhamento de informações. E toda essa estruturação é realizada pelo HTML. </p>
+    <p class="sub"> <b> HTML pode ser usado em: </b></p>
     <ul>
         <li>Parte visual de aplicações web, como no frontend;</li>
         <li>Desenvolvimento de aplicações Mobile para Android e iOS;</li>
         <li>Desenvolvimento de jogos</li>
-    </ul>
-    <h2>Para quê serve o CSS?</h2>
-    <p>A linguagem de CSS(Cascating Style Sheets) é uma linguagem de marcação usado juntamente ao HTML, ou seja, é um código utilizado na representação visual dos Websites.</p>
-    <h2>Para quê serve o Markdown?</h2>
-    <p>O Markdown é um sistema de formatação simples e aberta, sendo ele visualmente limpo e pode ser facilmente convertido em HTML. Basicamente as alterações nos textos são feitos apenas com os símbolos do teclado, sem um um visual complexo como os de HTML ou CSS. </p>
+    </ul><br>
+    <h2 class="title">Para quê serve o CSS?</h2>
+    <p>A linguagem de CSS (Cascating Style Sheets) é uma linguagem de marcação usado juntamente ao HTML, ou seja, é um código utilizado na representação visual dos Websites. Utilizando o CSS temos a disposição infinitas possibilidades, como alterar a cor do texto e do fundo, fonte e espaçamento entre parágrafos. Também podemos criar tabelas, usar variações de layouts, ajustar imagens para suas respectivas telas e assim por diante. A maior vantagem ao utilizar o CSS está nessa variação, isso permite uma maior reutilização de código, facilitando a manutenção e agilizando o desenvolvimento.</p> <br>
+
+    <h2 class="title">Para quê serve o Markdown?</h2>
+    <p>O Markdown é um sistema de formatação simples e aberta, sendo ele visualmente limpo e pode ser facilmente convertido em HTML. Basicamente as alterações nos textos (Título, Subtítulos, <b>Negrito </b>, <i>Itálico</i> etc) são feitos apenas com os símbolos do teclado, sem um um visual complexo como os de HTML ou CSS. Sua maior vantagem está relacionada com o tamanho e durabilidade dos arquivos, geralmente são muito pequenos e dificilmente se "quebram", com isso a linguagem Markdown possuí a capacidade de ser processada por uma grande variedade de programas.</p>
 </body>
 </html>
